kube-state-metrics-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
      - name: kube-state-metrics
        image: bitnami/kube-state-metrics
#       image: gcr.io/google_containers/kube-state-metrics:v0.5.0
#       image: arti.local:9084/prometheus-lib-local/google_containers/kube-state-metrics:v0.5.0
        ports:
        - containerPort: 8080
