grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: nadi.k8s.com
    http:
      paths:
        - backend:
            serviceName: grafana
            servicePort: 3000
